# redeyes

./: Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
redeyes/: __init__.py  api.py  app.py  database.py  db.py  globals.py  views.py  wsgi.py
redeyes/static/: style.css
redeyes/templates/: index.html  links.html
