[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "redeyes"
authors = [{name = "Luke Whritenour", email = "lukewhrit@proton.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "Flask ~= 2.2.0",
    "psycopg2 ~= 2.9.5"
]

[project.optional-dependencies]
lint = [
    "isort == 5.11.2",
    "flake8 ~= 6.0.0",
    "flake8-bugbear == 22.12.6",
    "flake8-commas == 2.1.0",
    "flake8-comprehensions == 3.10.0",
    "flake8-quotes == 3.3.1",
    "pep8-naming == 0.13.2",
]

[project.urls]
Home = "https://github.com/lukewhrit/redeyes"
